Header and hp fixes (#78)
* Fixed-header

* header gaps

* restructure site wrapper

remove animation from header
page below header and not under

* fix horizontal scroll bug

---------

--- a/packages/client/src/components/header/header.module.scss
+++ b/packages/client/src/components/header/header.module.scss
@@ -1,45 +1,28 @@
 @import '@portfolio/client/src/styles/theme.module.scss';
 
 .root {
-    position: fixed;
-    width: 100vw;
-    height: $header-height;
-    top: 0px;
-    font: $text-font;
-    padding: 1rem;
-    display: flex;
-}
-
-.leftContainer {
-    display: flex;
-    flex: 1;
-    align-items: center;
+  height: $header-height;
+  font: $text-font;
+  padding: 1rem;
+  display: flex;
+  background-color: $background;
 }
 
 .logo {
-    font: $logo-font;
-    height: fit-content;
-}
-
-.contactLink {
-    flex: 1;
-    text-align: end;
+  font: $logo-font;
+  height: fit-content;
 }
 
 .menu {
-    margin-right: auto;
-    margin-left: auto;
+  margin-left: auto;
 }
 
 @media only screen and (max-width: $mobile-width) {
+  .logo {
+    display: none;
+  }
 
-    .logo,
-    .contactLink {
-        display: none;
-    }
-
-    .menu {
-        margin-left: 0px;
-    }
-
+  .menu {
+    margin-left: 0px;
+  }
 }
